fix: scrollbar for drawers

--- a/apps/csk-v-next/src/styles/globals.css
+++ b/apps/csk-v-next/src/styles/globals.css
@@ -2,13 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  html {
-    scrollbar-gutter: stable;
-  }
-}
-
-
 @layer utilities {
   .thin-scrollbar::-webkit-scrollbar {
     width: 6px;
